reorg result and costruzione modelli globali

--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -81,7 +81,7 @@ auto gravitazione trascurabile quindi la struttura verticale \'e determinata dal
 \end{align}
 Il momento torcente esercitato da S su $C^c$ \'e
 \begin{equation}
-T=\iint_{S^c}(\vec{r}\wedge\nabla\sigma)\,ds=\int_S\vec{r}\wedge(\sigmadl\vec{n})
+T=\iint_{S^c}(\vec{r}\wedge\nabla\sigma)\,ds=\int_S\vec{r}\wedge(\sigma\,dl\vec{n})
 \end{equation}
 Nel caso S sia circonferenza di raggio r:
 \begin{equation}
@@ -113,6 +113,7 @@ Enhanced turbulent viscosity: $-\Sigma\exv{u_ru_{\phi}}=\Sigma\nu r\TDy{r}{\Omeg
 \end{workout}
 
 \begin{workout}[Accretion disk sources]
+Lodato: classical disk physics
 o218, 296: disk formation, constrains from solar system
 the alpha disk pg 18: theory of turbulent accretion disk
 \end{workout}
