gfm fig - benz14 goupilZM

--- a/seminario.bib
+++ b/seminario.bib
@@ -157,6 +157,16 @@ pages={1282},
   publisher={IOP Publishing}
 }
 
+@article{goupil2008planet,
+  title={Planet--Disk Interactions},
+  author={Goupil, M-J and Zahn, J-P and Masset, FS},
+  journal={European Astronomical Society Publications Series},
+  volume={29},
+  pages={165--244},
+  year={2008},
+  publisher={EDP Sciences}
+}
+
 @article{mordasini2018planetary,
   title={Planetary population synthesis},
   author={Mordasini, Christoph},
