--- a/GFMresult.tex
+++ b/GFMresult.tex
@@ -16,6 +16,8 @@ planet population synthesis
 
 \section{Modello disco di accrescimento e distribuzione condizioni iniziali}
 
+Refs: Sec4 mordasini09
+
 \begin{workout}[modello globale: evoluzione dal semplice al complesso]
 Global model of planets formation and evolution: more detailed submodels
 \end{workout}
@@ -52,13 +54,19 @@ Densit\'a superficiale iniziale:
 \end{workout}
 
 
-\section{Distribuzione iniziale planetesimi}
+\section{Distribuzione iniziale planetesimi ed evoluzione}
 
 Assumendo conversione completa di polvere in planetesimi, la densit\'a superficiale di planetesimi \'e
 \begin{equation}
 \Sigma_p(t=0,r)=f_{dg}\eta_{ice}\Sigma_g(t=0,r)
 \end{equation}
 con $f_{dg}$ rapporto gas/polvere (circa metallicit\'a) \'e una parametro casuale con distribuzione che riflette distribuzione di metallicit\'a stellari, $\eta_{ice}$ tiene conto della discontinuit\'a nella distribuzione superficiale di solidi all'iceline.
+
+L'evoluzione della distribuzione dei planetesimi tiene conto dell'acrescimento sugli embrioni planetari:
+\begin{equation}\dot{\Sigma}_p=-\frac{(3M_*)\expy{1/3}}{6\pia_p^2B_LM_p\expy{1/3}}\dot{M}_c\end{equation}
+e generalmente si assume che eccentricit\'a e inclinazione seguono distribuzione di Rayleigh.
+
+Il drift dei planetesimi dovuto all'interazione col gas e la formaziane gap sono di solito trascurati.
 
 \begin{workout}[Initial planetesimal distro]
 Dust converted early everywhere fully-efficient (mordasini18: pg 12),Thommes pg8)
@@ -67,21 +75,22 @@ Dust converted early everywhere fully-efficient (mordasini18: pg 12),Thommes pg8
 &\dot{\Sigma}_p(r)=-\frac{1}{2\pi aB_LR_H}\dot{M}_c
 \end{align*}
 Icelines Mordasini 1141: inside where T exceeds sublimation
-
 {Embryo starting position}
 Usually a distro uniform in log(a): relative spacing of few Hill spheres (Kokubo Ida 10)
 Ida, lin10: asymptotical isolation mass ''Toward a Deterministic Model of Planetary Formation VI'',
 Trapped evolution model: Hasegawa pudritz 11, Cridland 16
-
 \end{workout}
 
-\section{Accrescimento dei protopianeti e gas}
+\section{Caratteristiche iniziali degli embioni planetarii e accrescimento}
 
-La massa dei core varia secondo
+La massa iniziale dei core deve essere molto minore della massa di isolamento: si usano core di frazioni di massa terrestre; la distanza dalla stella varia seguendo distribuzione di probabilit\'a $p(a)$ inversamente proporzionale alla distanza orbitale $p(a)\,da\propto\frac{da}{\Delta}\propto\,dlog{a}$
+
+La massa dei core varia per l'accrescimento dei planetesimi secondo
 \begin{align}
-&\dot{M}_c=\Omega\Sigma_pR^2_{capt}F_G\\
-&\dot{\Sigma}_p(r)=-\frac{1}{2\pi aB_LR_H}\dot{M}_c
+&\dot{M}_c=\Omega\Sigma_pR^2_{capt}F_G
+%&\dot{\Sigma}_p(r)=-\frac{1}{2\pi aB_LR_H}\dot{M}_c
 \end{align}
+
 
 Si risolvono numericamente le equazioni di conservazione di massa, equilibrio idrostatico, conservazione/trasporto energia 1D
 
