some refs orbital structure, laplace eqa

--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -588,6 +588,7 @@ Armitage07 pg 57-58
 \end{workout}
 
 \begin{workout}[Migration refs]
+lecture 14 (Henning Benz Klahr mordasini)
 Terquem papaloizou (planet formation and migration) pg 43
 Planet-disk interaction and orbital evolution
 Refs: \cite{ward1997protoplanet}, \cite{terquem2000disks}, \cite{menou2004low}, (
@@ -966,3 +967,7 @@ aligned absidal line: papaloizou 03
 {\let\clearpage\relax\let\cleardoublepage\relax
 \chapter{N-body interactions inside proto disk}
 }
+
+\begin{workout}[Long-term evolution: laplace equations]
+The HARPS search for southern extra-solar planets-XXVIII. Up to seven planets orbiting HD 10180: probing the architecture of low-mass planetary systems
+\end{workout}
