migration parametrization (initial condition)

--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -181,7 +181,7 @@ Initial disk mass
 {Disk lifetime}
 $1-10My$ with mean $3My$ (Haisch01, Mamajek09)
 
-\begin{figure}[!ht]\includegraphics[keepaspectratio,width=\textwidth]{initdistro}\label{fig:initdistro}\caption{Da \cite{mordasini2018planetary}.}\end{figure}
+\begin{figure}[!ht]\includegraphics[keepaspectratio,width=\textwidth]{initdistro}\label{fig:initdistro}\caption{Distribuzione caretteristiche dischi di accrescimento. Da \cite{mordasini2018planetary}.}\end{figure}
 
 \end{workout}
 
@@ -348,7 +348,7 @@ La popolazione dei planetesimi evolve attraverso interazione con gas e scatterin
 
 L'accrescimento di massa del protopianeta procede secondo
 \begin{equation}
-\TDy{t}{M_e}=\pi R_c\rho_{pl}v F_g=\pi R_c\Sigma_p\Omega F_g
+\TDy{t}{M_e}=\pi R_c\rho_{pl}v F_g=\pi R_c\Sigma_p\Omega F_g\label{eq:Gaccretionpl}
 \end{equation}
 con $F_g$ fattore che tiene conto dell'interazione gravitazionale, determinato dalla velocit\'a relativa tra i 2 corpi, e $\rho_{pl}$ densit\'a di planetesimi:
 \begin{align}
@@ -437,8 +437,8 @@ per planetesimi circa 1km (perch\'e?)
 \end{equation}
 \end{workout}
 
-\begin{workout}[feeding zone]
-Jacobi integral:
+\begin{workout}[feeding zone: jacobi integral]
+Jacobi integral
 \begin{align}
 &E_J=\frac{1}{2}(e^2+i^2)a^2\Omega^2-\frac{3}{8}b^2\Omega^2+\frac{9}{2}R_H^2\Omega^2\\
 &\tilde{E}_J=\frac{E_J}{a^2h^2\Omega^2},\ h=R_H/a
