--- a/GFMresult.tex
+++ b/GFMresult.tex
@@ -18,6 +18,8 @@ planet population synthesis
 
 Refs: Sec4 mordasini09
 
+La popolazione planetaria \'e costruita risolvendo un modello di formazione planetaria pi\'u o meno realistico a partire da condizioni iniziali distribuite per rispecchiare le osservazioni e determinate da argomenti teorici.
+
 \begin{workout}[modello globale: evoluzione dal semplice al complesso]
 Global model of planets formation and evolution: more detailed submodels
 \end{workout}
@@ -29,11 +31,13 @@ Modelli pi\'u recenti  risolvono l'equazione per l'evoluzione viscosa:
 &\TDy{t}{\Sigma}=\frac{1}{r}\PDof{r}[3r\expy{1/2}\PDof{r}(\nu\Sigma r\expy{1/2})]+\dot{\Sigma}_w(r)+\dot{\Sigma}_p(r)\label{eq:diskaccrphev-m18}\\
 &\dot{\Sigma}_w(a)=\left\{\begin{array}{c}0\\\frac{\dot{M}_w}{2\pi(a_{max}-R_g)a}\\\end{array}\right.
 \end{align}
-con $\dot{Sigma}_w$ contributo della foto-evaporazione,  $\dot{Sigma}_p$ contributo di accrescimento di gas dei pianeti e con densit\'a superficiale iniziale:
+con $\dot{\Sigma}_w$ contributo della foto-evaporazione,  $\dot{\Sigma}_p$ contributo di accrescimento di gas dei pianeti e con densit\'a superficiale iniziale:
 \begin{equation}
 \Sigma(a,t=0)=\Sigma_0(\frac{r}{1AU})\expy{p_g}\Exp{[-(\frac{r}{R_o})\expy{2+p_g}]}(1-\sqrt{\frac{r}{R_i}})
 \end{equation}
 in i parametri possono essere scelti casualmente secondo una distribuzione di probabilit\'a ricavata dalle osservazioni.
+
+La distribuzione di massa e la distribuzione della stima delle et\'a \'e mostrata in \eqref{fig:initdistro}: si ha un fit ragionevole per $t_{disk}(\alpha,\Sigma_0,\dot{M}_w)$ per $\dot{M}_w=\SIrange{5e-10}{3e-8}\msun{}/\si{\year}$ per $\alpha=\num{7e-3}$
 
 \begin{workout}[viscosit\'a disco]
 Nella popolazione planetaria simulata $\alpha$ \'e fissato sulla base delle osservazioni  ed \'e omogeneo e costante.
@@ -53,7 +57,6 @@ Densit\'a superficiale iniziale:
 4-Mordasini18 (Hayashi81). $p_g\approx1$ (Andrews10).
 \end{workout}
 
-
 \section{Distribuzione iniziale planetesimi ed evoluzione}
 
 Assumendo conversione completa di polvere in planetesimi, la densit\'a superficiale di planetesimi \'e
@@ -63,10 +66,10 @@ Assumendo conversione completa di polvere in planetesimi, la densit\'a superfici
 con $f_{dg}$ rapporto gas/polvere (circa metallicit\'a) \'e una parametro casuale con distribuzione che riflette distribuzione di metallicit\'a stellari, $\eta_{ice}$ tiene conto della discontinuit\'a nella distribuzione superficiale di solidi all'iceline.
 
 L'evoluzione della distribuzione dei planetesimi tiene conto dell'acrescimento sugli embrioni planetari:
-\begin{equation}\dot{\Sigma}_p=-\frac{(3M_*)\expy{1/3}}{6\pia_p^2B_LM_p\expy{1/3}}\dot{M}_c\end{equation}
+\begin{equation}\dot{\Sigma}_p=-\frac{(3M_*)\expy{1/3}}{6\pi a_p^2B_LM_p\expy{1/3}}\dot{M}_c\end{equation}
 e generalmente si assume che eccentricit\'a e inclinazione seguono distribuzione di Rayleigh.
 
-Il drift dei planetesimi dovuto all'interazione col gas e la formaziane gap sono di solito trascurati.
+Il drift dei planetesimi dovuto all'interazione col gas e la formaziane gap nella distribuzione dei planetesimi sono di solito trascurati.
 
 \begin{workout}[Initial planetesimal distro]
 Dust converted early everywhere fully-efficient (mordasini18: pg 12),Thommes pg8)
@@ -83,7 +86,7 @@ Trapped evolution model: Hasegawa pudritz 11, Cridland 16
 
 \section{Caratteristiche iniziali degli embioni planetarii e accrescimento}
 
-La massa iniziale dei core deve essere molto minore della massa di isolamento: si usano core di frazioni di massa terrestre; la distanza dalla stella varia seguendo distribuzione di probabilit\'a $p(a)$ inversamente proporzionale alla distanza orbitale $p(a)\,da\propto\frac{da}{\Delta}\propto\,dlog{a}$
+La massa iniziale dei core deve essere molto minore della massa di isolamento: si usano core di frazioni di massa terrestre; la distanza dalla stella varia seguendo distribuzione di probabilit\'a $p(a)$ inversamente proporzionale alla distanza orbitale $p(a)\,da\propto\frac{da}{\Delta}\propto\,dlog{a}$. Il momento di comparsa \'e determinato dal rate di accrescimento dei planetesimi \eqref{eq:Gaccretionpl}.
 
 La massa dei core varia per l'accrescimento dei planetesimi secondo
 \begin{align}
@@ -91,37 +94,55 @@ La massa dei core varia per l'accrescimento dei planetesimi secondo
 %&\dot{\Sigma}_p(r)=-\frac{1}{2\pi aB_LR_H}\dot{M}_c
 \end{align}
 
-
-Si risolvono numericamente le equazioni di conservazione di massa, equilibrio idrostatico, conservazione/trasporto energia 1D
-
-\begin{workout}[Attached phase: boundary conditions]
+Per determinare l'accrescimento di gas \'e necessario calcolare la struttura planetaria in alternativa si pu\'o averne una stima da
 \begin{align}
-&P_{pl}=P_{Neb}\\
-&T_{Pl}=T_{Neb}\\
-&R_{Pl}=Min(R_H,R_H)
+&\dot{M}_{e,KH}=\frac{M_p}{\tau_{KH}}\\
+&\tau_{KH}=10\expy{p}(\frac{M_p}{\mearth{}})^q(\frac{\kappa}{\si{\gram\per\square\cm}})\si{\year}
 \end{align}
-\end{workout}
-
-
-\begin{workout}[Detached phase: transition condition and boundary condition]
-Transition attached/detched phase $\approx10\mearth{}$.
-Accretion shock for free-falling materials from Hill radius (more realistic circumplanetary disk: Papailoizou Nelson 05)
-\begin{align}
-&\dot{M}_{XY}^{max}\\
-&v_{ff}^2=2GM(\frac{1}{R}-\frac{1}{R_H})\\
-&P=P_{neb}+\frac{\dot{M}_{XY}}{4\pi R^2}v_{ff}+\frac{2g}{3\kappa}\\
-&\tau=max(\rho_{neb}\kappa_{neb}R,2/3)\\
-&T^4_{int}=\frac{3\tau L_{int}}{8\pi\sigma R^2},\ T^4=(1-A)T_{neb}^4+T_{int}^4
-\end{align}
-$R\approx1.5-5\rjupiter{}$ depending on entropy: THE PLANETARY ACCRETION SHOCK:I. FRAMEWORK FOR RADIATION-HYDRODYNAMICAL SIMULATIONS AND FIRST RESULTS (m17), Characterization of exoplanets from their formation III: The statistics of planetary luminosities (m17)
-Bondi accretion rate: $\dot{M}_{e, Bondi}\approx\frac{\Sigma}{H}(R_H/3)^3\Omega$ or viscous accretion rate $\dot{M}_{e, visc}\approx f_{lub}3\pi\nu\Sigma_g$
-\end{workout}
-
+dove p,q sono ottenuti tramite modelli di struttura planetaria
 \begin{workout}[Higher mass gap formation reduces accretion rate]
 \begin{equation}
 f_{va04}=1.668(\frac{M_p}{\mjupiter{}})\expy{1/3}\exp{-\frac{M_p}{1.5\mjupiter{}}}+0.04
 \end{equation}
 \end{workout}
+
+\subsection{Parametrizzazioni della migrazione}
+
+\begin{workout}[Migrazione mordasini 09]
+La velocit\'a di migrazione calcolata per disco isotermo (\cite{tanaka2002}) \'e troppo rapida
+\end{workout}
+
+
+\begin{workout}[model migration-pps]
+Tanaka02-m09
+Paardekooper 11 - Dittkrist 14
+\end{workout}
+
+\begin{workout}[Lindblad torque: velocit\'a migrazione I]
+masset casoli 10/paardekooper 10
+\end{workout}
+
+\begin{workout}[type I/type II transition]
+m09: Hill radius larger than disk scale hight
+\end{workout}
+
+\begin{workout}[Saturation mass of horseshoe drag]
+eq 2: theimportance of disk structure in stalling planet migration
+\begin{equation}
+\TDy{t}{r}=f(p,q,p_{\nu},p_{\xi})\frac{M_p}{M_*}\frac{\Sigma r^2}{M_*}(\frac{r\Omega}{c_s})^2r\Omega
+\end{equation}
+\end{workout}
+
+\begin{workout}[Velocit\'a tipo II: viscosit\'a]
+disk dominated
+planet dominates: $\TDy{t}{a}=-\frac{3\nu}{a}\frac{\Sigma(a,t)a^2}{M_p}$
+\end{workout}
+
+
+{\let\clearpage\relax\let\cleardoublepage\relax
+\chapter{Confronto semi-quantitativo tra caratteristiche popolazioni sintetiche e osservate}
+}
+
 
 \section{Popolazione sintetiche}
 
@@ -151,10 +172,6 @@ Considero o risulati di alcuni modelli di formazione planetari (\cite{mordasini2
 \includegraphics[width=0.9\textwidth,keepaspectratio]{envelopecoresynth}
 \caption{Da \cite{mordasini2018planetary}. }
 \end{figure}
-
-{\let\clearpage\relax\let\cleardoublepage\relax
-\chapter{Confronto semi-quantitativo tra caratteristiche popolazioni sintetiche e osservate}
-}
 
 {\let\clearpage\relax\let\cleardoublepage\relax
 \chapter{Raffinamento dei modelli}
