--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -3,28 +3,30 @@
 {\let\clearpage\relax\let\cleardoublepage\relax
 \chapter{Sistema solare}
 }
-Il sistema solare \'e stato a lungo il solo banco di prova delle teorie di formazione planetaria. Inoltre \'e possibile avere riferimenti temporali tramite l'analisi chimica di meteoriti, analisi diretta, e altri corpi minori, tramite spettroscopia o missioni spaziali. In particolare considero una stima inferiore della massa del disco protosolare e i risultati dei modelli dei pianeti giganti.
+Il sistema solare \'e il punto di partenza delle teorie di formazione planetaria: il primo pianeta extra-solare \'e osservato nel 1995. Inoltre si hanno informazioni accurate sulle orbite planetarie e sulla popolazione di corpi minori, si hanno anche riferimenti temporali tramite analisi chimica dei meteoriti.
 
-L'et\'a del sole \'e definata come tempo in sequenza principale; tecniche eliosismologiche e radiologiche determinano un'et\'a di \SI{4.57+-0.11}{\giga\year} e \SI{4.57+-0.07}{\giga\year}.
+L'et\'a del sole \'e definita come tempo in sequenza principale; tecniche eliosismologiche e radiologiche determinano un'et\'a di \SI{4.57+-0.11}{\giga\year} e \SI{4.57+-0.07}{\giga\year}.
 La Terra si \'e formata completamente circa \SI{100}{\mega\year} dopo i meteoriti.
 
-Per stimare la massa del disco protoplanetario \cite{weidenschilling1977distribution} ha considerato la massa presente nei pianeti e nella fascia asteroidale arricchita di H/He per avere composizione solare: distribuendo questa massa in un anello di spessore proporzionale al raggio di Hill e centrato sulle orbite, l'andamento della densit\'a superficiale \'e mostrato in \ref{fig:Snebuladensity}, $\sigma\propto r\expy{-3/2}$.
-La formazione per accrescimento di gas su nucleo solido quindi prefede arricchimento di composizione rispetto a quella di partenza. Vincoli alla densit\'a sono imposti dalla misura dei momenti multipolo del potenziale gravitazionale: risolvendo un modello di pianeta che rientri nei vincoli osservativi si determinano la massa del core e la metallicit\'a dell'inviluppo gassoso dei 4 pianeti gassosi ().
+Per stimare la massa del disco protoplanetario \cite{weidenschilling1977distribution} ha considerato la massa presente nei pianeti e nella fascia asteroidale arricchita di H/He per avere composizione solare: distribuendo questa massa in un anello di spessore proporzionale al raggio di Hill e centrato sulle orbite si ha l'andamento della densit\'a superficiale mostrato in \ref{fig:Snebuladensity}, $\sigma\propto r\expy{-3/2}$.
 
+La formazione per accrescimento di gas su nucleo solido prevede arricchimento di metalli rispetto alla composizione di partenza. Vincoli alla densit\'a sono imposti dalla misura dei momenti di multipolo del potenziale gravitazionale: risolvendo un modello di pianeta che rientri nei vincoli osservativi si determinano la massa del core e la metallicit\'a dell'inviluppo gassoso dei 4 pianeti gassosi (vedi \ref{tab:JScomp}, \ref{tab:UNcomp}).
 
 \begin{table}[!ht]
 \begin{subfigure}[b]{0.47\textwidth}
 \centering
 \includegraphics[trim={0cm 0 0 0},clip, width=0.9\textwidth]{JScomp}
-\caption{Da \cite{baraffe2009physical}}\label{fig:JScomp}
+\label{tab:JScomp}
 \end{subfigure}
 ~
 \begin{subfigure}[b]{0.47\textwidth}
 \centering
 \includegraphics[trim={0cm 0 0 0},clip,width=0.9\textwidth]{UNcomp}\label{tab:UNcomp}
-\caption{Da \cite{baraffe2009physical}.}
 \end{subfigure}
+\caption{Composizione Giove, Saturno, Urano e Nettuno. Da \cite{baraffe2009physical}}
 \end{table}
+
+Il modello di Nizza del sistema solare riproduce caratteristiche orbitali dei pianeti giganti considerando la loro migrazione in una distribuzione di planentesimi di $30-50\mearth{}$. Ulteriori conferme della popolazione di planetesimi vengono dalla craterizzazionedei pianeti terrestri e corpi minori come dall'esistenza di numerosi oggetti di piccole dimensioni.4
 
 \begin{workout}[Cosa dire dei modelli planetarii: core giganti gassosi: modelli planetari e raffronto isolation mass in MMSN]
 parte relativa ai momenti multipolo gravitazionale. 
@@ -42,8 +44,10 @@ pg 297; allegre 95
 
 \begin{workout}[Planetesimal and late heavy bombardament]
 pg 302
-Introdurre planetesimi: migrazione. 
+Introdurre planetesimi: migrazione.
 debris disk: pg 222
+Si ipotizza che i planetesimi superstiti popolino la fascia di Kuiper e la nube di Oort
+
 \end{workout}
 
 \begin{workout}[Stellar age: isochrone fitting]
