--- a/appendice.tex
+++ b/appendice.tex
@@ -1,3 +1,5 @@
+\chapter{Tecniche osservative}
+
 \section{Velocit\'a radiale}
 
 
@@ -67,3 +69,9 @@ ground based (pg 158) space based imaging (pg162)
 fig 7.10
 Survey: bowler 2016
 \end{workout}
+
+\chapter{Interazione disco-pianeta}
+
+\section{Horseshoe drag: unsaturated}
+
+HORSESHOEDRAGINTHREE-DIMENSIONALGLOBALLYISOTHERMALDISKS
