--- a/main.tex
+++ b/main.tex
@@ -132,9 +132,9 @@ Per costruire un modello di formazione globale \'e necessario introdurre una des
 \backmatter
 }
 %\newgeometry{margin=60px,tmargin=20px}%%APPENDICE
-%\appendix
-%\part{Appendice}
-%\subfile{appendix}
+\appendix
+\part{Appendice}
+\input{appendice}
 %\restoregeometry
 \printbibliography
 %\listoffigures
@@ -142,4 +142,5 @@ Per costruire un modello di formazione globale \'e necessario introdurre una des
 \woc
 \erratac
 \fi
+
 \end{document}
