distro [Fe/H], massa e fotoevaporazione

--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -245,7 +245,7 @@ infrared excess: gail hoppe10
 
 
 {\let\clearpage\relax\let\cleardoublepage\relax
-\chapter{Schema di formazione planetaria per core accretion}
+\chapter{Schema di accrescimento componente solida}
 }
 
 \begin{figure}[!t]
