--- a/GFMresult.tex
+++ b/GFMresult.tex
@@ -37,7 +37,13 @@ con $\dot{\Sigma}_w$ contributo della foto-evaporazione,  $\dot{\Sigma}_p$ contr
 \end{equation}
 in i parametri possono essere scelti casualmente secondo una distribuzione di probabilit\'a ricavata dalle osservazioni.
 
-La distribuzione di massa e la distribuzione della stima delle et\'a \'e mostrata in \eqref{fig:initdistro}: si ha un fit ragionevole per $t_{disk}(\alpha,\Sigma_0,\dot{M}_w)$ per $\dot{M}_w=\SIrange{5e-10}{3e-8}\msun{}/\si{\year}$ per $\alpha=\num{7e-3}$
+La distribuzione di massa e la distribuzione della stima delle et\'a \'e mostrata in \ref{fig:initdistro}: la massa \'e determinata misurando flusso di emissione termica della polvera la distribuzione di $\log{M_{disk}}$  \'e gaussiana e per il cluster Ophiuchus la distribuzione \'e fittata da gaussiana con $\mu=-1.38$ ($M_{disk}=0.042\msun{}$) e $\sigma=0.49$.
+
+Il tempo caratteristico del disco \'e determinato dalla viscosit\'a $\alpha$: fissata $\alpha$, e assumendo la distribuzione uniforme nel logaritmo di $\dot{M}_w$, e calcolando  $t_{disk}(\alpha,\Sigma_0,\dot{M}_w)$ si determinano gli estremi dello fotoevaporazione per riprodurre tempi di vita osservati.
+
+ $t_{disk}(\alpha,\Sigma_0,\dot{M}_w)$ per $\dot{M}_w=\SIrange{5e-10}{3e-8}\msun{}/\si{\year}$ per $\alpha=\num{7e-3}$.
+
+
 
 \begin{workout}[viscosit\'a disco]
 Nella popolazione planetaria simulata $\alpha$ \'e fissato sulla base delle osservazioni  ed \'e omogeneo e costante.
@@ -64,6 +70,21 @@ Assumendo conversione completa di polvere in planetesimi, la densit\'a superfici
 \Sigma_p(t=0,r)=f_{dg}\eta_{ice}\Sigma_g(t=0,r)
 \end{equation}
 con $f_{dg}$ rapporto gas/polvere (circa metallicit\'a) \'e una parametro casuale con distribuzione che riflette distribuzione di metallicit\'a stellari, $\eta_{ice}$ tiene conto della discontinuit\'a nella distribuzione superficiale di solidi all'iceline.
+
+Sulla scorta della piccola differenza tra composizione solare e composizione meteoritica e assumendo inoltre che il ferro sia un buon indicatore della componente solida  si usa la formula
+\begin{equation}
+\frac{f_{D/G}}{f_{D/G\odot}}=10\expy{[\cel{Fe}{}{}{}/\cel{Fe}{}{}{}]}
+\end{equation}
+
+\begin{workout}[Planet host stars are enriched in nikel and silicon]
+Robinson06
+\end{workout}
+
+Si introduce un fattore correttivo per il drift della polvere entro i \SI{20}{\astronomicalunit} compreso tra $2-4$ e infine si sfrutta la distribuzione della metallicit\'a per stelle di massa solare nelle vicinanze del Sole:
+\begin{equation}
+p([Fe/H])=\frac{1}{\sigma\sqrt{2\pi}}\exp{-\frac{([Fe/H]-\mu)^2}{2\sigma^2}}
+\end{equation}
+Per le stelle campionate da CORALIE si ha $\mu=-0.02$ e $\sigma=0.22$.
 
 L'evoluzione della distribuzione dei planetesimi tiene conto dell'acrescimento sugli embrioni planetari:
 \begin{equation}\dot{\Sigma}_p=-\frac{(3M_*)\expy{1/3}}{6\pi a_p^2B_LM_p\expy{1/3}}\dot{M}_c\end{equation}
