--- a/main.tex
+++ b/main.tex
@@ -121,7 +121,7 @@ L'ipotesi su cui si basano le simulazioni considerata \'e che la componente polv
 {\let\clearpage\relax\let\cleardoublepage\relax
 \part{Popolazioni planetarie sintetiche e confronto con osservazioni}
 }
-Per costruire un modello di formazione globale \'e necessario introdurre una descrizione semplificata dei processi fisici che portano alla formazione di un pianeta; quindi generare una popolazione planetaria a partire da distribuzione di condizioni iniziali del disco di accrescimento, ricavata dalle osservazioni che riproduca la distribuzione di caratteristiche osservate, tenendo conto dei bias osservativi.
+Per costruire un modello di formazione globale \'e necessario introdurre una descrizione semplificata dei processi fisici che portano alla formazione di un pianeta; quindi generare una popolazione planetaria a partire da distribuzione di condizioni iniziali del disco di accrescimento ricavate dalle osservazioni che riproduca la distribuzione di caratteristiche osservate, tenendo conto dei bias osservativi.
 
 \input{GFMresult}
 \cleartorecto
