MR-freq-obssynth.jpeg

--- a/GFMresult.tex
+++ b/GFMresult.tex
@@ -202,6 +202,8 @@ Popolazione pianeti in origine nettuniani (frazione giaccio nel core $50\%$) che
 
 \end{workout}
 
+\begin{figure}[!ht]\includegraphics[keepaspectratio,width=0.9\textwidth]{MR-freq-obssynth}\label{}\caption{Da \cite{mordasini2018pèlanetary}.}\end{figure}
+
 \begin{figure}[!ht]
 \includegraphics[width=0.9\textwidth,keepaspectratio]{MaLR-freq-synth}\label{fig:MaLR-freq-synth}
 \caption{Da \cite{mordasini2018planetary}. }
