--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -185,6 +185,14 @@ fig 2.6,fig 2.18
 \end{workout}
 
 \begin{figure}[!ht]
+\begin{subfigure}[b]{0.47\textwidth} \centering \includegraphics[trim={0cm 0 0 0},clip, width=0.\textwidth]{freqvsPgiant}\caption{Da \cite{ref}.}\label{fig:figref} \end{subfigure}
+~
+\begin{subfigure}[b]{0.\textwidth} \centering \includegraphics[trim={0cm 0 0 0},clip,width=\textwidth]{freqvsPlowM}\label{fig:figlabel} \caption{Da \cite{ref}.}
+\end{subfigure}
+\end{figure} 
+
+
+\begin{figure}[!ht]
 \begin{subfigure}[b]{0.47\textwidth}
 \includegraphics[trim={0cm 0 0 0},clip, width=0.9\textwidth]{freqvsM}
 \caption{Da \cite{mayor2011harps}.}\label{fig:Mdistro}
