--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -3,30 +3,47 @@
 {\let\clearpage\relax\let\cleardoublepage\relax
 \chapter{Sistema solare}
 }
-Il sistema solare \'e il punto di partenza delle teorie di formazione planetaria: il primo pianeta extra-solare \'e osservato nel 1995. Inoltre si hanno informazioni accurate sulle orbite planetarie e sulla popolazione di corpi minori, si hanno anche riferimenti temporali tramite analisi chimica dei meteoriti.
+Il sistema solare \'e il punto di partenza delle teorie di formazione planetaria. Infatti si hanno informazioni accurate sui pianeti e loro orbite e sulla popolazione di corpi minori, si hanno anche riferimenti temporali tramite analisi chimica dei meteoriti.
 
-L'et\'a del sole \'e definita come tempo in sequenza principale; tecniche eliosismologiche e radiologiche determinano un'et\'a di \SI{4.57+-0.11}{\giga\year} e \SI{4.57+-0.07}{\giga\year}.
+L'et\'a del sole \'e definita come tempo in sequenza principale; tecniche eliosismologiche determinano un'et\'a di \SI{4.57+-0.11}{\giga\year} mentre l'analisi chimica dei meteoriti \SI{4.57+-0.07}{\giga\year}.
 La Terra si \'e formata completamente circa \SI{100}{\mega\year} dopo i meteoriti.
+
+\begin{figure}[!ht]
+\includegraphics[trim={0cm 2cm 0 0cm},clip, width=0.9\textwidth]{Snebuladensity}\label{fig:Snebuladensity}\caption{Andamento minimum mass solar nebula (MMSN). Da \cite{weidenschilling1977distribution}.}
+\end{figure}
 
 Per stimare la massa del disco protoplanetario \cite{weidenschilling1977distribution} ha considerato la massa presente nei pianeti e nella fascia asteroidale arricchita di H/He per avere composizione solare: distribuendo questa massa in un anello di spessore proporzionale al raggio di Hill e centrato sulle orbite si ha l'andamento della densit\'a superficiale mostrato in \ref{fig:Snebuladensity}, $\sigma\propto r\expy{-3/2}$.
 
-La formazione per accrescimento di gas su nucleo solido prevede arricchimento di metalli rispetto alla composizione di partenza. Vincoli alla densit\'a sono imposti dalla misura dei momenti di multipolo del potenziale gravitazionale: risolvendo un modello di pianeta che rientri nei vincoli osservativi si determinano la massa del core e la metallicit\'a dell'inviluppo gassoso dei 4 pianeti gassosi (vedi \ref{tab:JScomp}, \ref{tab:UNcomp}).
+\begin{workout}[accrescimento di gas su nucleo solido prevede arricchimento di metalli ]
 
-\begin{table}[!ht]
-\begin{subfigure}[b]{0.47\textwidth}
-\centering
-\includegraphics[trim={0cm 0 0 0},clip, width=0.9\textwidth]{JScomp}
-\label{tab:JScomp}
-\end{subfigure}
-~
-\begin{subfigure}[b]{0.47\textwidth}
-\centering
-\includegraphics[trim={0cm 0 0 0},clip,width=0.9\textwidth]{UNcomp}\label{tab:UNcomp}
-\end{subfigure}
-\caption{Composizione Giove, Saturno, Urano e Nettuno. Da \cite{baraffe2009physical}}
+\end{workout}
+
+La formazione per accrescimento di gas su nucleo solido prevede arricchimento di metalli rispetto alla composizione di partenza. Vincoli alla densit\'a sono imposti dalla misura dei momenti di multipolo del potenziale gravitazionale: risolvendo un modello di pianeta che rientri nei vincoli osservativi si determinano la massa del core e la metallicit\'a dell'inviluppo gassoso dei 4 pianeti gassosi (vedi  \ref{tab:JSUNcomp}).
+
+\begin{table}[!htb]
+    \begin{minipage}{.5\linewidth}
+      \centering
+        \begin{tabular}{ccc}
+&\parbox{1.5cm}{Jupiter $317.8\mearth{}$}&\parbox{1.5cm}{Saturn $95.1\mearth{}$}\\
+  $M_c$&$0-11\mearth{}$&$9-22\mearth{}$\\
+$M_Z$&$1-39\mearth{}$&$1-8\mearth{}$\\
+$M_Z^{tot}$&$8-39\mearth{}$&$13-28\mearth{}$\\
+$Z/Z_{\odot}$&$1-6$&$6-14$\\
+ \end{tabular}
+    \end{minipage}%
+    \begin{minipage}{.5\linewidth}
+      \centering
+        \begin{tabular}{ccc}
+&\parbox{1.5cm}{Uranus $14.5\mearth{}$}&\parbox{1.5cm}{Neptune $17.1\mearth{}$}\\
+$M_{rock}$&$3.7\mearth{}$&$4.2\mearth{}$\\
+$M_{ice}$&$9.3\mearth{}$&$10.7\mearth{}$\\
+$M_{H/He}$&$1.5\mearth{}$&$2.2\mearth{}$\\
+        \end{tabular}
+    \end{minipage} 
+    \caption{Composizione Giove, Saturno, Urano e Nettuno. Da \cite{baraffe2009physical}}\label{tab:JSUNcomp}
 \end{table}
 
-Il modello di Nizza del sistema solare riproduce caratteristiche orbitali dei pianeti giganti considerando la loro migrazione in una distribuzione di planentesimi di $30-50\mearth{}$. Ulteriori conferme della popolazione di planetesimi vengono dalla craterizzazionedei pianeti terrestri e corpi minori come dall'esistenza di numerosi oggetti di piccole dimensioni.4
+Il modello di Nizza del sistema solare riproduce caratteristiche orbitali dei pianeti giganti considerando la loro migrazione in una distribuzione di planentesimi di $30-50\mearth{}$; la presenza di numerosa popolazione di planetesimi \'e corroborata dalla craterizzazionedei pianeti terrestri e corpi minori come dall'esistenza di numerosi oggetti di piccole dimensioni superstiti.
 
 \begin{workout}[Cosa dire dei modelli planetarii: core giganti gassosi: modelli planetari e raffronto isolation mass in MMSN]
 parte relativa ai momenti multipolo gravitazionale. 
@@ -62,9 +79,7 @@ CAI: $4567Gyr$ +3Myr chondrule
 \begin{workout}[Sistema solare - andamento densit\'a e composizione]
 asteroid mercury mars mass depletion pg 298
 farinella pg513,weidenschilling 77,
-\begin{figure}[!t]
-\includegraphics[trim={0cm 0 0 0},clip, width=0.9\textwidth]{Snebuladensity}\label{fig:Snebuladensity}
-\end{figure}•
+
 \end{workout}
 
 \begin{workout}[atmospher composition and photoevaporation]
@@ -115,11 +130,11 @@ Effects of inhomogenous infall on obliquity (tremaine 91, bate 10)
 
 
 {\let\clearpage\relax\let\cleardoublepage\relax
-\chapter{Alcune caratteristiche della popolazione di esopianeti}
+\chapter{Caratteristiche della popolazione di esopianeti}
 }
 
-\begin{wrapfigure}[14]{l}{0.55\textwidth}
-\includegraphics[trim={0cm 0 0 0},clip, width=0.4\textwidth]{obsMa}\label{fig:Maplot}
+\begin{wrapfigure}[10]{l}{0.55\textwidth}
+\includegraphics[trim={0cm 0 0 0},clip, width=0.5\textwidth]{obsMa}\label{fig:Maplot}
 \caption{Diagramma massa-distanza degli esopianeti in ''The extrasolar planet encyclopedia''. Rosso, celeste, magenta e verde sono pianeti rivelati tramite RV, T, osservazione diretta e microlensing. Da \cite{mordasini2018}.}
 \end{wrapfigure}
 
@@ -148,6 +163,8 @@ Per probabilit\'a di rivelamento del $50\%$ la minima massa planetaria \'e
 M_{p,min}\approx4\mearth{}(\frac{N}{20})\expy{-1/2}(\frac{\sigma}{\SI{1}{\meter\per\second}})(\frac{P}{\SI{1}{\day}})\expy{1/3}(\frac{M_*}{\msun{}})\expy{2/3}
 \end{equation}
 dove $\sigma$ tiene conto errori strumentali e rumore stellare.
+
+Per sistemi multipli consideriamo la sovrapposizione lineare di $n_p$ termini \eqref{eq:vrsignal}: viene sottratto il segnale Kepleriano dominante fino a che resta solo rumore.
 
 \begin{figure}[!ht]
 \begin{subfigure}[b]{0.3\textwidth}
@@ -195,10 +212,6 @@ fig 2.6,fig 2.18
 \caption{Da \cite{mayor2011harps}}
 \end{subfigure}
 \end{figure}
-
-
-
-Per sistemi multipli consideriamo la sovrapposizione lineare di $n_p$ termini \eqref{eq:vrsignal}: viene sottratto il segnale Kepleriano dominante fino a che resta solo rumore.
 
 \begin{workout}[multplanet system: mean motion resonances, orbital spacing,...]
 dynamical classification (barnes 08): tidal dominated if ($a<0.1$), resonant dom. if one resonant argument librates, secular otherwise.
